Add test results for VideoControllerTest and update JAR file